Roma - Global Commit 64 - Added React Image Lightbox and Adjusted Z-Index of Nav to Work With Modal

--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -124,7 +124,7 @@
 
 @media (min-width: 1025px) and (orientation: landscape) {
   // SECTION ONE
-  .section-one {
+  #tank_blast {
     background-attachment: fixed;
   }
 
