--- a/app/javascript/stylesheets/4-pages/roma.scss
+++ b/app/javascript/stylesheets/4-pages/roma.scss
@@ -1,24 +1,9 @@
-// Universal Section Styles
+// Global Styles
 
-.sec-title {
-  margin-bottom: 0 !important;
-  @include font_mix;
-  font-weight: 200;
-  font-size: 30px !important;
-  text-transform: uppercase;
+nav {
+  z-index: 1 !important;
 }
 
-hr {
-  display: block;
-  height: 2px;
-  border: 0;
-  border-top: 1px solid black;
-  margin: 1em 0;
-  padding: 0;
-}
-
-.lead {
-  @include font_mix;
-  font-weight: 200;
-  margin-top: 20px;
+#SRLLightbox {
+  z-index: 2 !important;
 }
