--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "stylesheets/2-component_styles/header";
 @import "stylesheets/2-component_styles/uni_sec_styles";
 @import "stylesheets/2-component_styles/serv_cards";
+@import "stylesheets/2-component_styles/gallery";
 
 // 3 - Sections
 @import "stylesheets/3-sections/tank_init";
