--- a/app/javascript/stylesheets/2-component_styles/gallery.scss
+++ b/app/javascript/stylesheets/2-component_styles/gallery.scss
@@ -1,19 +1,19 @@
 .row-gal {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+}
+.overflow {
+  overflow: hidden;
 }
 
 .column-gal {
   flex: 25%;
   max-width: 25%;
-  padding: 0 4px;
-  overflow: hidden;
   background-color: black;
+  overflow: hidden;
 }
 
 .column-gal img {
-  margin-top: 8px;
   vertical-align: middle;
   width: 100%;
   opacity: 0.6;
