Roma - Global Commit 68 - Added Section Four Components and Added Landscape Media Queries for Services Section

--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -27,6 +27,23 @@
     font-size: 100% !important;
     padding: 5px 15px !important;
   }
+
+  //  SECTION TWO
+  .sec-title {
+    font-size: 21px !important;
+  }
+
+  .lead {
+    font-size: 16px !important;
+  }
+
+  .card-title {
+    font-size: 18px !important;
+  }
+
+  .card-text {
+    font-size: 16px !important;
+  }
 }
 
 @media (min-width: 667px) and (max-width: 735px) and (orientation: landscape) {
@@ -57,6 +74,24 @@
   .quote {
     font-size: 100% !important;
     padding: 7px 17px !important;
+  }
+
+  // SECTION TWO
+
+  .sec-title {
+    font-size: 21px !important;
+  }
+
+  .lead {
+    font-size: 16px !important;
+  }
+
+  .card-title {
+    font-size: 18px !important;
+  }
+
+  .card-text {
+    font-size: 16px !important;
   }
 }
 
@@ -89,6 +124,24 @@
     font-size: 100% !important;
     padding: 7px 17px !important;
   }
+
+  // SECTION TWO
+
+  .sec-title {
+    font-size: 21px !important;
+  }
+
+  .lead {
+    font-size: 18px !important;
+  }
+
+  .card-title {
+    font-size: 18px !important;
+  }
+
+  .card-text {
+    font-size: 18px !important;
+  }
 }
 
 @media (min-width: 812px) and (max-width: 1023px) and (orientation: landscape) {
@@ -119,6 +172,24 @@
   .quote {
     font-size: 100% !important;
     padding: 7px 17px !important;
+  }
+
+  // SECTION TWO
+
+  .sec-title {
+    font-size: 21px !important;
+  }
+
+  .lead {
+    font-size: 18px !important;
+  }
+
+  .card-title {
+    font-size: 15px !important;
+  }
+
+  .card-text {
+    font-size: 12.5px !important;
   }
 }
 
