--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
   </section>
   <section id="secthree">
   </section>
+  <section id="secfour">
+  </section>
     <%= yield %>
   </body>
 </html>
