--- a/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
@@ -50,6 +50,15 @@
   .card-text {
     font-size: 14px !important;
   }
+
+  // SEMI BREAK
+  #semi-break {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/semi/semi_new.png");
+    background-position: 93% 0%;
+    transform: rotateY(180deg);
+    height: 45vh;
+  }
 }
 
 // Extra small devices (portrait phones, less than 576px)
@@ -105,6 +114,15 @@
   .card-text {
     font-size: 16px !important;
   }
+
+  // SEMI BREAK
+  #semi-break {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/semi/semi_new.png");
+    background-position: 93% 0%;
+    transform: rotateY(180deg);
+    height: 45vh;
+  }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) and (orientation: portrait) {
@@ -150,6 +168,15 @@
   .card-text {
     font-size: 14px !important;
   }
+
+  // SEMI BREAK
+  #semi-break {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/semi/semi_new.png");
+    background-position: 93% 0%;
+    transform: rotateY(180deg);
+    height: 45vh;
+  }
 }
 
 @media (min-width: 1024px) and (orientation: portrait) {
@@ -180,5 +207,13 @@
   .quote {
     font-size: 110% !important;
     padding: 10px 25px !important;
+  }
+  // SEMI BREAK
+  #semi-break {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+      url("../images/semi/semi_new.png");
+    background-position: 93% 0%;
+    transform: rotateY(180deg);
+    height: 45vh;
   }
 }
