--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "stylesheets/3-sections/section_one";
 @import "stylesheets/3-sections/section_two";
 @import "stylesheets/3-sections/section_three";
+@import "stylesheets/3-sections/section_four";
 @import "stylesheets/3-sections/semi_break";
 
 // 4 - Pages
