Roma - Global Commit 69 - Adjusted Second BG Photo on Main and Media Queries

--- a/app/javascript/stylesheets/2-component_styles/serv_cards.scss
+++ b/app/javascript/stylesheets/2-component_styles/serv_cards.scss
@@ -6,15 +6,17 @@
 .card-body {
   @include font_mix;
   font-weight: 200;
+  font-size: 20px;
 }
 
 .card-title {
   @include font_mix;
   text-transform: uppercase;
+  font-weight: 200;
   font-size: 20px;
 }
 
 .card-text {
   @include font_mix;
-  font-size: 20px;
+  font-weight: 200;
 }
