--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -231,7 +231,14 @@
     background-attachment: fixed;
   }
 
+  // SEMI BREAK
   #semi-break {
+    background-attachment: fixed;
+  }
+
+  // SECTION FOUR
+
+  #secfour {
     background-attachment: fixed;
   }
 }
