--- a/app/javascript/stylesheets/3-sections/section_four.scss
+++ b/app/javascript/stylesheets/3-sections/section_four.scss
@@ -20,6 +20,23 @@
   margin-bottom: 30px;
 }
 
+.info-decoration {
+  @include font_mix;
+  color: white !important;
+  font-weight: 200 !important;
+  font-size: 16px !important;
+}
+
+h4 {
+  font-size: 18px;
+  font-weight: 200 !important;
+}
+
+h5 {
+  font-size: 16px !important;
+  font-weight: 200 !important;
+}
+
 .contact-hr {
   border-top: 1px solid white;
 }
