Roma - Global Commit 74 - Added Somewhat styled Contact Section, Pre media Query Adjust 1.1

--- a/app/javascript/stylesheets/2-component_styles/uni_sec_styles.scss
+++ b/app/javascript/stylesheets/2-component_styles/uni_sec_styles.scss
@@ -1,6 +1,7 @@
 // Universal Section Styles
 
 .sec-title {
+  margin-top: 20px !important;
   margin-bottom: 0 !important;
   @include font_mix;
   font-weight: 200;
