Roma - Global Commit 77 - Adjusted more styles for the Quote/Contact Section - Pre Media Query Adjustment

--- a/app/javascript/stylesheets/3-sections/section_four.scss
+++ b/app/javascript/stylesheets/3-sections/section_four.scss
@@ -1,8 +1,4 @@
-#third-bg-image {
-  background-color: rgb(226, 226, 226);
-}
-
-.contact-bg-deck {
+#contact-bg-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     url("../images/tank/tank.png");
   background-size: cover;
@@ -11,111 +7,4 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-}
-.card {
-  background-color: rgba(0, 0, 0, 0) !important;
-}
-
-#contact-card {
-  color: $roma_white;
-  font-weight: 400 !important;
-}
-
-.lead-contact {
-  margin-bottom: 30px;
-}
-
-.info-decoration {
-  @include font_mix;
-  color: white !important;
-  font-weight: 200 !important;
-  font-size: 16px !important;
-}
-
-h4 {
-  font-size: 18px;
-  font-weight: 200 !important;
-  padding: 0 !important;
-  margin: 0 !important;
-  margin-bottom: 5px !important;
-}
-
-h5 {
-  font-size: 16px !important;
-  font-weight: 200 !important;
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-.contact-hr {
-  border-top: 1px solid white;
-}
-.col-store {
-  margin: 0 !important;
-}
-
-.card-header,
-.card-footer {
-  opacity: 1 !important;
-}
-
-hr {
-  margin: 0 !important;
-  padding: 0 !important;
-  margin-bottom: 10px !important;
-}
-
-.info-div {
-  margin-bottom: 15px !important;
-}
-
-.contact-title {
-  margin: 0 !important;
-  margin-top: 5px !important;
-}
-
-input {
-  margin-bottom: 15px !important;
-}
-
-.g-logo-quote-box {
-  height: 200px;
-  width: 200px;
-}
-
-h6 {
-  @include font_mix;
-  color: white !important;
-  font-size: 20px !important;
-}
-
-form {
-  @include font_mix;
-  color: white !important;
-  font-size: 16px !important;
-}
-
-input {
-  background-color: transparent !important;
-}
-
-textarea {
-  background-color: transparent !important;
-}
-
-::-webkit-input-placeholder {
-  color: white !important;
-  opacity: 0.8 !important;
-}
-:-moz-placeholder {
-  color: white !important;
-  opacity: 0.8 !important;
-}
-::-moz-placeholder {
-  color: white !important;
-  opacity: 0.8 !important;
-}
-:-ms-input-placeholder {
-  color: white !important;
-  opacity: 0.8 !important;
 }
