--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "stylesheets/2-component_styles/uni_sec_styles";
 @import "stylesheets/2-component_styles/serv_cards";
 @import "stylesheets/2-component_styles/gallery";
+@import "stylesheets/2-component_styles/contact";
 
 // 3 - Sections
 @import "stylesheets/3-sections/tank_init";
