--- a/app/javascript/stylesheets/2-component_styles/uni_sec_styles.scss
+++ b/app/javascript/stylesheets/2-component_styles/uni_sec_styles.scss
@@ -14,8 +14,9 @@ hr {
   height: 2px;
   border: 0;
   border-top: 1px solid black;
-  margin: 1em 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  margin-bottom: 10px !important;
 }
 
 .lead {
