Roma - Global Commit 78 - Adjusted Portrait Queries for Contact/Quote Section - Pre Landscape Query Adjustment

--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -1,8 +1,7 @@
 @media (min-width: 568px) and (max-width: 666px) and (orientation: landscape) {
   // SECTION ONE
-
   #wht_nav_logo {
-    height: 75px;
+    height: 70px;
     margin-left: 15px;
   }
 
@@ -49,6 +48,11 @@
   #semi-break {
     background-position: 50% 63%;
     height: 65vh;
+  }
+
+  // SECTION FOUR - CONTACT/QUOTE
+  #logo-comment-mg {
+    margin-top: 5px !important;
   }
 }
 
@@ -105,6 +109,11 @@
     background-position: 50% 63%;
     height: 65vh;
   }
+
+  // SECTION FOUR - CONTACT/QUOTE
+  #logo-comment-mg {
+    margin-top: 5px !important;
+  }
 }
 
 @media (min-width: 736px) and (max-width: 811px) and (orientation: landscape) {
@@ -159,6 +168,11 @@
   #semi-break {
     background-position: 50% 63%;
     height: 65vh;
+  }
+
+  // SECTION FOUR - CONTACT/QUOTE
+  #logo-comment-mg {
+    margin-top: 5px !important;
   }
 }
 
@@ -215,6 +229,19 @@
     background-position: 50% 60%;
     height: 70vh;
   }
+
+  // SECTION FOUR - CONTACT/QUOTE
+  #logo-comment-mg {
+    margin-top: 25px !important;
+  }
+
+  #contact-h6 {
+    font-size: 17px !important;
+  }
+
+  #contact-h5 {
+    font-size: 14px !important;
+  }
 }
 
 @media (min-width: 1024px) and (max-width: 1366px) and (orientation: landscape) {
@@ -222,6 +249,11 @@
   #semi-break {
     background-position: 50% 90%;
     height: 55vh;
+  }
+
+  // SECTION FOUR - CONTACT/QUOTE
+  #logo-comment-mg {
+    margin-top: 25px !important;
   }
 }
 
