Roma - Global Commit 80 - Added Fifth and Last Section Main Component - Pre Adding Internal FAQ Component

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
   </section>
   <section id="secfour">
   </section>
+  <section id="secfive">
+  </section>
     <%= yield %>
   </body>
 </html>
