Roma - Global Commit 82 - Adjusted Queries for Contact Section - Pre Add Backend for Quote Form

--- a/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/landscape_media_queries.scss
@@ -304,6 +304,10 @@
   #logo-comment-mg {
     margin-top: 25px !important;
   }
+
+  #contact-h5 {
+    font-size: 15px !important;
+  }
 }
 
 @media (min-width: 1367px) and (orientation: landscape) {
