--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'roma_app' %>
     <%= javascript_pack_tag 'scroll' %>
+    <%= javascript_pack_tag 'charCount' %>
   </head>
 
   <body>
