--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "stylesheets/2-component_styles/serv_cards";
 @import "stylesheets/2-component_styles/gallery";
 @import "stylesheets/2-component_styles/contact";
+@import "stylesheets/2-component_styles/faq";
 
 // 3 - Sections
 @import "stylesheets/3-sections/tank_init";
@@ -17,6 +18,7 @@
 @import "stylesheets/3-sections/section_three";
 @import "stylesheets/3-sections/section_four";
 @import "stylesheets/3-sections/semi_break";
+@import "stylesheets/3-sections/section_five";
 
 // 4 - Pages
 @import "stylesheets/4-pages/roma";
