--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= javascript_pack_tag 'roma_app' %>
     <%= javascript_pack_tag 'scroll' %>
     <%= javascript_pack_tag 'charCount' %>
+    <%= javascript_pack_tag 'onFaq' %>
   </head>
 
   <body>
