Roma - Global Commit 91 - Moving Down Page To Tweak Responsivness and Refactor Code

--- a/app/javascript/stylesheets/2-component_styles/header.scss
+++ b/app/javascript/stylesheets/2-component_styles/header.scss
@@ -1,9 +1,9 @@
 .roma-hero {
   color: $roma_white !important;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 48%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
   margin-left: 25px !important;
 }
 
