--- a/app/javascript/stylesheets/2-component_styles/navbar.scss
+++ b/app/javascript/stylesheets/2-component_styles/navbar.scss
@@ -51,7 +51,7 @@ li {
 }
 
 .navbar.active .nav-link {
-  color: black !important;
+  color: rgba(0, 0, 0, 0.7) !important;
 }
 
 .navbar.active .nav-link:hover,
