Roma - Global Commit 93 - Moving Down Page To Tweak Responsivness and Refactor Code 1.2

--- a/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
@@ -108,6 +108,10 @@
     height: 120px;
     width: 120px;
   }
+
+  .quote-deck {
+    padding-top: 20px !important;
+  }
 }
 
 @media (min-width: 375px) and (max-width: 575.98px) and (orientation: portrait) {
