--- a/app/javascript/stylesheets/2-component_styles/contact.scss
+++ b/app/javascript/stylesheets/2-component_styles/contact.scss
@@ -3,15 +3,18 @@
   background-color: rgba(0, 0, 0, 0) !important;
 }
 
-.card-deck {
-  margin-top: 20px !important;
-  padding-top: 20px !important;
-}
-
 #contact-deck-bg {
   background-color: rgba(0, 0, 0, 0.2) !important;
   border-radius: 25px;
   padding: 0 !important;
+}
+
+.card-deck {
+  padding-top: 20px !important;
+}
+
+.quote-deck-out {
+  padding-bottom: 20px !important;
 }
 
 #contact-card {
@@ -20,17 +23,17 @@
   margin: 0 !important;
 }
 
-#contact-info-dec {
-  @include font_mix;
-  color: white !important;
-}
-
 .contact-title {
   margin: 0 !important;
   padding: 0 !important;
   margin-top: 20px !important;
   margin-bottom: 20px !important;
   color: white;
+}
+
+#contact-info-dec {
+  @include font_mix;
+  color: white !important;
 }
 
 .contact-info-titles {
@@ -58,14 +61,32 @@
 .info-sec {
   margin-bottom: 20px !important;
 }
+
+.quote-row {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
 // FORM CARD STYLES
+
+.logo-card {
+  margin: 0 !important;
+  padding: 0 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .left-logo {
   margin: 0 !important;
   padding: 0 !important;
-  display: flex;
-  justify-content: center;
-  align-content: center;
+}
+
+#contact-h6 {
+  @include font_mix;
+  color: white !important;
+  font-size: 18px !important;
+  font-weight: 200 !important;
 }
 
 #g-logo-quote-box {
@@ -75,19 +96,10 @@
   margin-bottom: 25px !important;
 }
 
-// #logo-comment-mg {
-//   margin-top: 25px !important;
-// }
-
-#contact-h6 {
-  @include font_mix;
-  color: white !important;
-  font-size: 18px !important;
-  font-weight: 200 !important;
-}
-
 form {
   @include font_mix;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 textarea:hover,
@@ -102,8 +114,7 @@ button:hover,
 label:focus,
 .btn:active,
 .btn.active {
-  outline: 0px !important;
-  outline-color: $roma_green;
+  outline: none !important;
   -webkit-appearance: none;
   box-shadow: none !important;
 }
@@ -153,6 +164,7 @@ textarea {
   padding: 8px 15px !important;
   border-radius: 100px !important;
 }
+
 #contact-btn:hover,
 #contact-btn:active {
   background-color: white;
@@ -170,4 +182,13 @@ textarea {
   float: right;
   font-weight: 300 !important;
   font-size: 16px !important;
+}
+
+.quote-form {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.quote-deck {
+  padding: 20px !important;
 }
