--- a/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
@@ -96,8 +96,12 @@
     margin-bottom: 10px !important;
   }
 
-  #logo-comment-mg {
-    margin-top: 5px !important;
+  .form-message {
+    font-size: 14px !important;
+  }
+
+  #count {
+    font-size: 13px !important;
   }
 
   #contact-h6 {
