Roma - Global Commit 97 - Moving Down Page To Tweak Responsivness and Refactor Code 1.6

--- a/app/javascript/stylesheets/2-component_styles/contact.scss
+++ b/app/javascript/stylesheets/2-component_styles/contact.scss
@@ -87,6 +87,7 @@
   color: white !important;
   font-size: 18px !important;
   font-weight: 200 !important;
+  margin: 0 !important;
 }
 
 #g-logo-quote-box {
