--- a/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
+++ b/app/javascript/stylesheets/5-media_queries/portrait_media_queries.scss
@@ -108,6 +108,10 @@
     font-size: 16px !important;
   }
 
+  .below-q-logo-margin {
+    padding-bottom: 20px !important;
+  }
+
   #g-logo-quote-box {
     height: 120px;
     width: 120px;
