Roma - Global Commit 99 - Testing Dev Tools in Production

--- a/app/javascript/stylesheets/2-component_styles/contact.scss
+++ b/app/javascript/stylesheets/2-component_styles/contact.scss
@@ -97,6 +97,11 @@
   margin-bottom: 20px !important;
 }
 
+#g-logo-quote-box-sub {
+  height: 170px;
+  width: 170px;
+}
+
 form {
   @include font_mix;
   margin: 0 !important;
